--- a/templates/index.html
+++ b/templates/index.html
@@ -22,7 +22,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>ClimaVision </h1>
+        <h1>Estação Materiologica</h1>
         <div class="weather-container">
             <div class="weather-header">
                 <h1>Clima atual</h1>
